# FICture2-ThumbnailProvider

./: CMakeLists.txt  README.md  ThumbnailProvider.cpp  ThumbnailProvider.def  ThumbnailProvider.h  ThumbnailProvider.vcxproj  ThumbnailProvider.vcxproj.filters
